# platform.core.appfw.amd

./: CMakeLists.txt  lmk.patch
inc/: amd_app_com.h  amd_app_data.h  amd_app_group.h  amd_app_stat.h  amd_app_status.h  amd_appinfo.h  amd_config.h  amd_cynara.h  amd_extractor.h  amd_input.h  amd_launch.h  amd_request.h  amd_share.h  amd_signal.h  amd_socket.h  amd_splash_screen.h  amd_status.h  amd_suspend.h  amd_util.h  amd_wayland.h  amd_widget.h  app_launchpad_types.h  app_signal.h  app_sock.h  menu_db_util.h  simple_util.h
packaging/: ac-init.service  ac.conf  ac.path  ac.service  ac.socket  amd.spec
src/: amd_app_com.c  amd_app_data.c  amd_app_group.c  amd_app_stat.c  amd_app_status.c  amd_appinfo.c  amd_cynara.c  amd_extractor.c  amd_input.c  amd_launch.c  amd_main.c  amd_request.c  amd_share.c  amd_signal.c  amd_socket.c  amd_splash_screen.c  amd_status.c  amd_suspend.c  amd_wayland.c  amd_widget.c  app_sock.c
